service-ubuntu.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-service
spec:
  selector:
    app: ubuntu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
